--- a/src/events.html
+++ b/src/events.html
@@ -97,7 +97,7 @@
                               <p>El evento se ha creado correctamente, para asociar un cuestionario para este evento presione continuar</p>
                             </div>
                             <div class="modal-footer">
-                              <button type="button" class="btn btn-primary" onclick="crearForm()">Continuar</button>
+                              <button type="button" class="btn btn-primary" onclick="back()">Continuar</button>
                             </div>
                           </div>
                         </div>
@@ -149,9 +149,7 @@
         function back() {
             location.href = "index.html";
         };
-        function crearForm() {
-            location.href = "questionMaker.html";
-        };
+
     </script>
 
 </body>
