--- a/src/questionMaker.html
+++ b/src/questionMaker.html
@@ -63,7 +63,7 @@
 
     <div class="modal" id="errorSave" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Proceso fallido</h5>
@@ -79,21 +79,21 @@
     </div>
 
     <div class="modal" id="successSave" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Proceso exitoso</h5>
-            </div>
-            <div class="modal-body">
-                <p>La creación del cuestionario se ha completado satisfactoriamente.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-success" id="closeSave">Close</button>
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Proceso exitoso</h5>
+                </div>
+                <div class="modal-body">
+                    <p>La creación del cuestionario se ha completado satisfactoriamente.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" id="closeSave">Cerrar</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
     <div class="container-fluid">
         <footer class="row py-3 border-top " id="footer">
