--- a/src/index.html
+++ b/src/index.html
@@ -118,6 +118,23 @@
         </div>
     </div>
 
+    <div class="modal" id="successDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Proceso exitoso</h5>
+            </div>
+            <div class="modal-body">
+                <p>Las respuestas han sido eliminadas.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" id="closeDelete">Cerrar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
     <div class="modal fade" id="modalRespuestas" tabindex="-1" aria-labelledby="modalRespuestasLabelTitle"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable">
