--- a/src/index.html
+++ b/src/index.html
@@ -221,6 +221,10 @@
     </div>
 
 </body>
-
+<script>
+    function addEvent() {
+        location.href = "events.html";
+    }
+</script>
 
 </html>
